# robotsoftware

./: .gitignore  README.md
OTA/: CHANGELOG.rst  CMakeLists.txt  package.xml
OTA/config/: key.txt  letsencrypt.pem
OTA/include/classes/: MQTTManager.h  OTAManager.h  VehicleVersion.h
OTA/include/libraries/: cipher.h  ryml_all.hpp
OTA/launch/: ota.launch
OTA/scripts/: sync_audios.sh
OTA/src/: mqtt_manager_code.cpp  netmonitor_code.cpp  ota_code.cpp  vehicle_version_code.cpp
communication/: CHANGELOG.rst  CMakeLists.txt  package.xml
communication/include/classes/: pic_defines.h
communication/include/classes/Jetson/: SPI_jetson.h  UART_jetson.h
communication/include/classes/Raspberry/: SPI_rasp.h  UART_rasp.h
communication/include/libraries/i2c/: i2c.c
communication/include/libraries/spi/: spi.c  spi.h
communication/launch/: test_spi.launch
communication/src/: i2c_code.cpp  spi_code.cpp  uart_code.cpp
drivers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
drivers/config/: credentials.json  wagonIndiaImu.json  wagonIndiaLight.json  wagonIndiaMotion.json  wagonIndiaPicManager.json
drivers/include/classes/: ControlSamples.h  VehicleCore.h  VehicleException.h  cam_exposure_publisher.h
drivers/include/classes/I2C/: GPIO_expander.h  I2C_driver.h  PCA9685Jetson.h
drivers/include/classes/JSON/: json_functions.h
drivers/include/classes/SPI/: SPIDriver.h
drivers/include/classes/audio/: SpeakerRasp.h  async_cmd_runner.h  audio_player.h  mpg123_cmd_player.h  speaker_jetson.h
drivers/include/classes/gps/: FusionGPS.h  GPS_GSM_v2.h  GPS_GSM_v3.h
drivers/include/classes/imu/: ImuSpi.h
drivers/include/classes/imu/bno055/: .goutputstream-RNVI20  bno055.h
drivers/include/classes/lights/: LightDriverJetson.h  LightDriverRasp.h
drivers/include/classes/motion/: MotionDriver.h
drivers/include/classes/navigation/: DiffOdometry.h  OrientationControl.h  PositionControl.h
drivers/include/classes/persistence/: persistence_reader_writer.h
drivers/include/classes/pic/: PicManagerDriverJetson.h  PicManagerDriverRasp.h
drivers/include/classes/servo/: ServoPCA9685.h  ServoPCA9685_V2.h
drivers/include/classes/servo/PCA9685/: PWM.h  ServoPCA9685Jetson.h
drivers/include/classes/structs/: Container.h  EstadoTeleops.h
drivers/include/libraries/: DataUtil.hpp  GPIOExpConstants.h
drivers/include/libraries/exceptions/: Exceptions.h
drivers/launch/: test_wagon_drivers.launch
drivers/msg/: control_expcamera_msg.msg  control_light_msg.msg  control_motion_msg.msg  gps_dgnst_msg.msg  orientation_msg.msg  sensor_light_msg.msg  sensor_motion_msg.msg  sensor_picmanager_msg.msg  transcript_msg.msg
drivers/npm/: package.json  speech.js  speech_example.js
drivers/src/: cam_exposure_publisher_jetson.cpp  cam_exposure_publisher_raspberry.cpp  camera_exposure_code.cpp  control_samples_code.cpp  diff_odom_code.cpp  exception_code.cpp  light_code.cpp  motion_code.cpp  orientation_control_code.cpp  persistence_reader_writer.cpp  picmanager_code.cpp  vehicle_drivers_code.cpp
drivers/src/audio/: async_cmd_runner.cc  async_cmd_runner_exception.cc  audio_player.cpp  mpg123_cmd_player.cpp  speaker_jetson.cpp
drivers/src/ble/: ble_node.py
drivers/src/drivers/: bno055_node.py
drivers/src/gps/: gps_code.cpp  gps_fusion_code.cpp  gps_rasp_code.cpp
drivers/src/imu/: imu_i2c.cpp  imu_spi_code.cpp
drivers/src/pwm/: pwm_code.cpp
drivers/src/servo/: servo_pca9685.cpp  servo_pca9685_jetson.cpp
drivers/src/tts/: tts_node.py
drivers/srv/: firmware_command.srv  gpio_expander_service.srv  i2c_srv.srv  pwm_service.srv  spi_display_ready_service.srv  spi_display_service.srv
joystick/: CHANGELOG.rst  CMakeLists.txt  package.xml
joystick/include/classes/: EstadoTeleops.h
joystick/include/classes/joystick/: JoystickWireless.h  VehicleJoystickController.h
joystick/launch/: test_joystick.launch
joystick/scripts/: bt_con.py  bt_con.sh
joystick/src/: joystick_generic_code.cpp
modules/: CHANGELOG.rst  CMakeLists.txt  package.xml
modules/config/: bridge_params.yaml  demo_params.yaml  tls_params.yaml
modules/include/classes/Control/: MusclesControl.h  NavigationControl.h
modules/include/classes/Error/: Error.h
modules/include/classes/MQTT/: MQTTError.h  MQTTHeartbeat.h
modules/include/classes/Structs/: Control.h  EstadoTeleops.h  Sensor.h
modules/include/classes/Test/: VideoMetrics.h
modules/include/classes/UDP/: ClientConnection.h  TeleopsControl.h  TeleopsSensor.h
modules/include/libraries/: PCA9685.h  safelog.h  timer.hpp
modules/launch/: test-leonano.launch
modules/msg/: autopilot_state_msg.msg  bt_device_state_msg.msg  bt_macs_msg.msg  containers_msg.msg  controlmetrics_msg.msg  controlsocket_status_msg.msg  instruction_msg.msg  joystick_msg.msg  manager_status_msg.msg  metrics_msg.msg  misc_ctrl_msg.msg  motion_ctrl_msg.msg  mqtt_subscribers_msg.msg  nodebeat_msg.msg  processed_video_metrics.msg  sensor_msg.msg  sensorsocket_status_msg.msg  socket_state_msg.msg  speaker_msg.msg  state_msg.msg  testing_msg.msg  videomode_msg.msg  vp_whereiam_msg.msg
modules/npm/: chromiumInterfaces.js  controlqr.js  open_chromium.js  package.json  proxyvehicle.js  proxyvehiclep2p.js
modules/npm/public/: dashboard.js  icons-diagnosis.json  icons-nodes.json  index.html  style.css
modules/src/: control_socket_code.cpp  error_code.cpp  location_code.cpp  mqtt_error_code.cpp  mqtt_heartbeat_code.cpp  muscles_control.cpp  navigation_control.cpp  sensor_socket_code.cpp  video_metrics_code.cpp
modules/srv/: enable_autopilot.srv  git_service.srv  gpsgsm_service.srv  imei_service.srv  mac_service.srv  module_status_service.srv  mqtt_subscribe_srv.srv  provider_service.srv  sensors_service.srv  supervise_service.srv  tts_service.srv
modules/urdf/: wagon.xacro
